--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -4,51 +4,58 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="13.00dp"
-    android:background="@drawable/bordermain"
-   >
+    android:background="@drawable/bordermain">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/llprofile_image"
             android:layout_width="@dimen/_66sdp"
             android:layout_height="@dimen/_66sdp"
-            android:src="@drawable/photocamera"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.555"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.225"
-            />
+            android:src="@drawable/photocamera" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="7dp">
+
             <TextView
                 android:id="@+id/llname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="7dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Name"
                 android:textSize="23.40dp"
                 android:textColor="@color/black"/>
+
             <TextView
                 android:id="@+id/llstatus"
                 android:layout_width="match_parent"
-                android:layout_marginStart="7dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Status"
                 android:textSize="10.40dp"
                 android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/ll_last_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:text=""
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="12sp"/>
+
         </LinearLayout>
-
     </LinearLayout>
-
 </RelativeLayout>
