--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,31 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="13.00dp"
-    android:background="@drawable/bordermain">
+    android:background="@drawable/bordermain"
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/llprofile_image"
+        <!-- FrameLayout to allow placing badges on top of the image -->
+        <FrameLayout
             android:layout_width="@dimen/_66sdp"
-            android:layout_height="@dimen/_66sdp"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp"
-            android:src="@drawable/photocamera" />
+            android:layout_height="@dimen/_66sdp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/llprofile_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/photocamera"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp"/>
+
+            <!-- The green online status indicator -->
+            <ImageView
+                android:id="@+id/online_status_badge"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/online_dot"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <!-- FIXED: Added the missing unread message count badge -->
+            <TextView
+                android:id="@+id/unread_count_badge"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="top|end"
+                android:background="@drawable/badge_background"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:text="3"/>
+
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="7dp">
+            android:layout_marginStart="15dp">
 
             <TextView
                 android:id="@+id/llname"
@@ -33,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Name"
-                android:textSize="23.40dp"
+                android:textSize="20sp"
                 android:textColor="@color/black"/>
 
             <TextView
@@ -42,20 +76,10 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Status"
-                android:textSize="10.40dp"
+                android:textSize="12sp"
                 android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/ll_last_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_regular"
-                android:text=""
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="12sp"/>
-
         </LinearLayout>
+
     </LinearLayout>
+
 </RelativeLayout>
